# snakeshell

./: Cargo.toml  LICENSE  README.md
src/: main.rs  snake.rs
